<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- AppBarLayout and Toolbar for the top app bar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <!-- Menu icon -->
                <ImageView
                    android:id="@+id/menu_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/menu_24px"
                    android:contentDescription="@string/menu"
                    android:clickable="true"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_gravity="start" />

                <!-- Title -->
                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cafeterion"
                    android:textSize="35sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="cursive"
                    android:textFontWeight="700"
                    android:layout_gravity="center" />

                <!-- Search icon (moved to the right) -->
                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/search_24px"
                    android:contentDescription="@string/search"
                    android:clickable="true"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_gravity="end" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>







        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Content FrameLayout -->
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_app"
            android:layout_marginBottom="?attr/actionBarSize"
            app:layout_behavior="@string/app_bar_scrolling_view_behavior">



            <TextView
                android:id="@+id/categories_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textSize="28sp"
                android:fontFamily="@font/pacifico_font"
                android:paddingTop="15dp"
                android:paddingLeft="5dp"
                android:textFontWeight="500"
                android:textColor="@color/color_primary"/>

            <!-- Horizontal Scrollable Cards -->
            <HorizontalScrollView
                android:id="@+id/category_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:layout_marginTop="?attr/actionBarSize"
                >

                <!-- Horizontal LinearLayout for Cards -->
                <LinearLayout
                    android:id="@+id/horizontal_layout_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- the layout will be populated by kotlin -->

                </LinearLayout>
            </HorizontalScrollView>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <!-- Trending foods -->
            <LinearLayout
                android:id="@+id/trending_foods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:scrollbars="none"
                android:paddingTop="250dp"
                android:layout_marginTop="?attr/actionBarSize"
                android:paddingBottom="50dp">

                <TextView
                    android:id="@+id/trending_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trending"
                    android:fontFamily="@font/pacifico_font"
                    android:textSize="28sp"
                    android:paddingTop="15dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/color_primary"/>

                <!-- contents are placed here by kotlin -->
            </LinearLayout>





            <!-- Recently foods -->
            <LinearLayout
                android:id="@+id/recently_foods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trending_foods"
                android:orientation="vertical"
                android:scrollbars="none"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="?attr/actionBarSize"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/recently_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recently"
                    android:textSize="28sp"
                    android:fontFamily="@font/pacifico_font"
                    android:paddingTop="15dp"
                    android:paddingLeft="5dp"

                    android:textColor="@color/color_primary"/>


            </LinearLayout>
            </RelativeLayout>

        </FrameLayout>
        </androidx.core.widget.NestedScrollView>
















        <!-- BottomAppBar -->
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabAlignmentMode="center"
            app:fabCradleRoundedCornerRadius="16dp"
            app:fabCradleMargin="8dp">

            <!-- Add menu items to the bottom app bar -->
            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:menu="@menu/bottom_menu" />
        </com.google.android.material.bottomappbar.BottomAppBar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- NavigationView for the side drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
